--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alpha class pro JS</title>
+    <!-- daisyUi CDN link -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- custom css link -->
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <!-- header section start here -->
+    <header>
+
+    </header>
+    <!-- header section end here -->
+
+    <!-- main section start here -->
+    <main>
+        <!-- home section start -->
+        <section class="home">
+
+        </section>
+        <!-- home section end -->
+        <!-- play ground section start -->
+        <section class="play-ground">
+
+        </section>
+        <!-- play ground section end -->
+        <!-- score section start -->
+        <section class="score">
+
+        </section>
+    </main>
+    <!-- main section end here -->
 </body>
 </html>
