home section added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- custom css link -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="font-poppins">
     <!-- header section start here -->
     <header>
 
@@ -18,15 +18,18 @@
     <!-- header section end here -->
 
     <!-- main section start here -->
-    <main>
+    <main class="min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-no-repeat bg-contain bg-center">
         <!-- home section start -->
-        <section class="home">
-
+        <section class="home flex flex-row justify-center min-h-screen text-center">
+           <div class="flex flex-col items-center justify-center">
+            <h1 class="text-8xl font-anton font-normal leading-[126px] text-white">ALPHABET CLASH</h1>
+            <p class="text-white text-lg">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
+            <button class="btn btn-praimary mt-4">Play Now</button>
+           </div>
         </section>
         <!-- home section end -->
         <!-- play ground section start -->
         <section class="play-ground">
-
         </section>
         <!-- play ground section end -->
         <!-- score section start -->
