keyboard responsib content added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         Don't watch keyboard  while playing...
                     </p></div>
                     <div class="flex justify-center items-center h-full">
-                        <p id="current-alphabet" class="text-9xl font-bold text-black uppercase ">Y id=" "</p></div>
+                        <p id="current-alphabet" class="text-9xl font-bold text-black uppercase ">Y</p></div>
                 </div>
                 <!-- ---------------- -->
                 <!-- keyboard start -->
