button acces added

--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
                 <!-- life score -->
                 <div class="flex justify-between w-3/5">
                     <button class="btn bg-purple-900 px-6 rounded-full h-2 text-white border-none">Life
-                        <i class="fa-solid fa-heart-circle-xmark"></i>1
-                        
+                        <i class="fa-solid fa-heart-circle-xmark"></i>
+                        <span id="current-life">5</span>
                       </button>
-                      <!-- ------------ -->
                       <button class="btn border-none px-6 h-2 rounded-full bg-violet-700 text-white">
-                        Score<i class="fa-solid border-1 bg-white  text-black pt-1 rounded-full h-5 text-center items-center w-5 fa-dollar-sign"></i>1
+                        Score<i class="fa-solid border-1 bg-white  text-black pt-1 rounded-full h-5 text-center items-center w-5 fa-dollar-sign"></i>
+                        <span id="current-score">0</span>
                       </button>
                 </div>
             </div>
