final content added

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <!-- score section start -->
         <section id="final-score" class="flex justify-center items-center min-h-screen hidden">
             <div class="text-center bg-[#FFFFFF33] p-7 rounded-xl space-y-3">
-                <h1 class="text-3xl text-emerald-300 font-extrabold">Game Over </h1>
+                <h1 class="text-3xl text-emerald-300 font-extrabold">Game Over 👏</h1>
                 <h1 class="text-white pb-8 text-5xl"><span class="font-extrabold text-5xl text-white">Score :</span> <span id="last-score">14</span></h1>
                 <button onclick="play()" class="btn text-lg bn-praimary font-bold">Play Agin</button>
                 <p class="text-white text-lg font-lg">Practice will make you Pro</p>
